fix: navigation link and activity page overflow

--- a/netlify-gatsby-contentful/src/components/HeroContainer/heroContainer.module.css
+++ b/netlify-gatsby-contentful/src/components/HeroContainer/heroContainer.module.css
@@ -13,7 +13,7 @@
     Ensure golden ratio for the hero size while limiting it to some extend to
     the viewport width
   */
-  height: 61.8vh;
+  height: 62vh;
   max-height: 400px;
 }
 
