--- a/netlify-gatsby-contentful/src/pages/activities.module.css
+++ b/netlify-gatsby-contentful/src/pages/activities.module.css
@@ -1,5 +1,6 @@
 .activityPage {
   padding: 0 30px;
+  overflow-x: hidden;
 }
 
 .activityPage h3 {
